--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,7 @@
     <!-- javascript -->
     <script src="./index.js" type="module" defer></script>
     <script src="./modules/f-getDateTime.js" type="module"></script>
-    <script src="./modules/f-constructorCard.js" type="module"></script>
-    <script src="./modules/o-dadosCards.js" type="module"></script>
-
-    
+    <script src="./modules/f-constructorCard.js" type="module"></script>   
     
 </head>
 <body>
@@ -40,7 +37,7 @@
                 <ul id="cards-ulist"> 
                     <!-- card example -->
                     <li class="card" id="card-0000">
-                        <img class="card-image" src="./icon/icons8-sunny-side-up-eggs-16.png" alt="image">
+                        <img class="card-image" src="./assets/eggsB.jpg" alt="image">
                         <h2 class="card-title">Title: card-0000</h2>
                         <p class="card-description">Description: Este é um card de exemplo para ser clonado</p>
                     </li>
