... make constructorCard functional with form

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,11 @@
             <section id="cards">
                 <ul id="cards-ulist"> 
                     <!-- card example -->
-                    <li class="card" id="card-0000">
+                    <!-- <li class="card" id="card-0000">
                         <img class="card-image" src="./assets/eggsB.jpg" alt="image">
                         <h2 class="card-title">Title: card-0000</h2>
                         <p class="card-description">Description: Este é um card de exemplo para ser clonado</p>
-                    </li>
+                    </li> -->
                 </ul>
             </section>
         </main>
