validacoes OK; insertBefore OK; ajustes html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
   
     <section class="banner-principal">
-      <a href=""><img src="./imagens/banner-mod.png" alt=""></a>
+      <!-- <a href=""><img src="./imagens/banner-mod.png" alt=""></a> -->
     </section>
     
   <main class="container" id="main">
