img logo atualizado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img class="logo animate__animated animate__backInLeft animate__delay-.8s" src="./imagens/logo.png">
+              <img class="logo animate__animated animate__backInLeft animate__delay-.8s" src="./imagens/Logo_quick_recipes.jpg">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -117,7 +117,7 @@
             ></button>
           </div>
           <img
-            src="./imagens/logo.png"
+            src="./imagens/Logo_quick_recipes.jpg"
             class="logo Mao na Massa mx-auto mt-5"
             width="200"
             alt="Logo Mão na Massa"
