border size inputs validation

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                       </li>
                       <li class="dropdown-item">
                         <div class="form-custom">
-                          <label class="campos-form" for="urlimagem">Imagem do prato</label>
+                          <label class="campos-form" for="urlImagem">Imagem do prato</label>
                           <div>  
-                            <input class="form-campos" id="urlimagem" type="text"  name="urlimagem" placeholder="Coloque a URL imagem" required>
+                            <input class="form-campos" id="urlImagem" type="text"  name="urlImagem" placeholder="Coloque a URL imagem" required>
                           </div>
                         </div>
                       </li>
